# pico-encoder

./: CMakeLists.txt  Encoder.h  README.md  keywords.txt  library.properties
Example/: CMakeLists.txt  LapCount.cpp  LapCount.ino  PerMilliSecond.cpp  PerMilliSecond.ino  encoder.ino  main.cpp
encoder/: CMakeLists.txt  Encoder.cpp  Encoder.h
src/: Encoder.cpp  Encoder.h
